<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<AutoCompleteTextView android:background="@color/well_nielsen" android:id="@+id/philanthropyThatllView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/carpetbagger_complainant_britten" android:textColor="#11EF4B" app:layout_constraintBottom_toTopOf="@id/antipathyNicholasView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckedTextView android:background="@color/latch_christie" android:id="@+id/antipathyNicholasView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/murmur_circular_sublimate_kenyon" android:textColor="@color/licensee_pact" app:layout_constraintBottom_toTopOf="@id/equineCoachLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/philanthropyThatllView"/>
<LinearLayout android:gravity="start" android:id="@+id/equineCoachLayout" android:layout_height="wrap_content" android:layout_margin="@dimen/denture_advocate_width" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/spectraCircumventView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/antipathyNicholasView">
<CheckedTextView android:background="@color/well_nielsen" android:id="@+id/jalopyWeaveView" android:layout_height="wrap_content" android:layout_marginStart="14dp" android:layout_marginTop="10dp" android:layout_width="match_parent" android:text="@string/burp_third_cabana" android:textColor="#16A678" android:textSize="@dimen/mouth_degradation_textsize"/>
<AutoCompleteTextView android:id="@+id/blackstonePuffinView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/guignol_schelling_murphy_midmorn" android:textColor="@color/apprentice_seymour" android:textSize="14sp"/>
<CheckedTextView android:background="@color/integrand_abstain" android:id="@+id/strokeView" android:layout_height="wrap_content" android:layout_marginStart="@dimen/agony_tailwind_padding" android:layout_marginTop="@dimen/aunt_gravel_height" android:layout_width="match_parent" android:text="@string/teal_heckle_shack_ester" android:textColor="@color/irreplaceable_duplicable_mouthful"/>
<EditText android:background="#503CC796" android:id="@+id/tupeloView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/coexist_councilmen_concision_besmirch" android:textColor="@color/speck_panoply" android:textSize="@dimen/providential_dwarf_textsize"/>
<TextView android:id="@+id/bluffView" android:layout_height="wrap_content" android:layout_margin="@dimen/suey_applied_margin" android:layout_width="wrap_content" android:text="@string/lidding_ornately_kamchatka_fatigue" android:textColor="@color/anna_bookkeep"/>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/mightntLayout" android:layout_height="wrap_content" android:layout_width="match_parent">
<CheckedTextView android:background="@color/envelope_stew_iambic" android:id="@+id/californiumView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/might_windy_carmela_silas" android:textColor="@color/well_nielsen" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<LinearLayout android:gravity="top|center_vertical" android:id="@+id/diminuendoLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
<Button android:background="@color/integrand_abstain" android:id="@+id/shopView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/telegraph_hugging_letterman" android:textColor="@color/poor_future_vida"/>
<LinearLayout android:gravity="center" android:id="@+id/depressedLayout" android:layout_height="match_parent" android:layout_width="wrap_content" android:orientation="horizontal">
<CheckedTextView android:background="@color/sphygmomanometer_recursive" android:id="@+id/inexpiableEpidemiologyView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/remember_hancock_incinerate_piloerection" android:textColor="#B0FB065F"/>
<AutoCompleteTextView android:id="@+id/reachSatanicView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingStart="@dimen/agony_tailwind_padding" android:paddingTop="46dp" android:text="@string/sleazy_atomic_salk_bender" android:textColor="@color/forwent_sham" android:textSize="@dimen/mouth_degradation_textsize"/>
<AutoCompleteTextView android:background="@color/agnes_ribbing" android:id="@+id/takeView" android:layout_height="match_parent" android:layout_marginStart="@dimen/consanguineous_pinball_padding" android:layout_width="wrap_content" android:paddingEnd="@dimen/flemish_rollins_size" android:paddingStart="@dimen/factor_destiny_margin" android:paddingTop="@dimen/clitoris_banister_height" android:text="@string/epitaxial_emolument_umbrella" android:textColor="#E9888E96"/>
<TextView android:background="@color/marinade_rasp_wolff" android:id="@+id/mensurationReflectorView" android:layout_height="match_parent" android:layout_margin="@dimen/spree_foodstuff_padding" android:layout_marginEnd="42dp" android:layout_marginStart="@dimen/palmate_tripe" android:layout_width="wrap_content" android:text="@string/metonymy_loci_crosslink_riga" android:textColor="@color/equinox_disposal"/>
<Button android:background="@color/apprentice_seymour" android:id="@+id/wandStricklandView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="@dimen/footbridge_rectifier_height" android:text="@string/lome_kept_queer" android:textColor="@color/propitious_mediterranean"/>
</LinearLayout>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/areaOswaldLayout" android:layout_height="match_parent" android:layout_width="wrap_content">
<TextView android:id="@+id/dogtrotView" android:layout_height="wrap_content" android:layout_marginBottom="42dp" android:layout_width="0dp" android:text="@string/tonk_cultivable_exasperater_schnabel" android:textColor="#2E2790" app:layout_constraintBottom_toTopOf="@id/chooseView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<Button android:id="@+id/chooseView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/expressive_proven_northernmost" android:textColor="@color/ternary_idaho_marshy" android:textSize="@dimen/precept_freehand_textsize" app:layout_constraintBottom_toTopOf="@id/hammondView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dogtrotView"/>
<TextView android:background="#93651F21" android:id="@+id/hammondView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/assuage_hemoglobin_ecstatic_implode" android:textColor="@color/truism_abuilding" android:textSize="@dimen/shutoff_nimbus_textsize" app:layout_constraintBottom_toTopOf="@id/averredView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/chooseView"/>
<Button android:background="@color/parkway_scottish_buzzword" android:id="@+id/averredView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/chairman_lanka_lilt_inheritor" android:textColor="@color/goblet_mushy_livingston" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hammondView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
<CheckedTextView android:background="@color/anna_bookkeep" android:id="@+id/trailblazerDustbinView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/footbridge_rectifier_height" android:text="@string/schoolhouse_usurp_mooney" android:textColor="@color/cabal_canonic"/>
<CheckBox android:id="@+id/wattsRemembranceView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/homunculus_peahen_padding" android:text="@string/lester_victorious_consequent" android:textColor="@color/marinade_rasp_wolff"/>
<Button android:background="@color/equinox_disposal" android:id="@+id/apocalypseStevensonView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="32dp" android:text="@string/cant_pirogue_premium" android:textColor="@color/manipulable_finial"/>
<CheckedTextView android:background="#2E2C42D2" android:id="@+id/pneumococcusSitusView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/footmen_primordial_height" android:layout_marginTop="44dp" android:layout_width="wrap_content" android:text="@string/patient_rebutted_hornblower" android:textColor="@color/jitterbug_sully"/>
</LinearLayout>
<EditText android:background="#1BFA37" android:id="@+id/spectraCircumventView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/greedy_rant_height" android:text="@string/ransom_abbott_meliorate" android:textColor="@color/speck_panoply" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/equineCoachLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
