<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<Button android:background="@color/sphygmomanometer_recursive" android:id="@+id/sentenceAnonymityView" android:layout_height="wrap_content" android:layout_width="@dimen/entwine_venture" android:text="@string/hallucinatory_thus_minim" android:textColor="#B12793" app:layout_constraintBottom_toTopOf="@id/eideticView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckBox android:background="@color/buss_horselike" android:id="@+id/eideticView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cascara_maladapt_emendable_heath" android:textColor="@color/apprentice_seymour" app:layout_constraintBottom_toTopOf="@id/gauzePuckView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sentenceAnonymityView"/>
<AutoCompleteTextView android:id="@+id/gauzePuckView" android:layout_height="wrap_content" android:layout_width="match_parent" android:padding="16dp" android:text="@string/afterword_bromfield_suspension" android:textColor="@color/equinox_disposal" android:textSize="@dimen/default_cupboard_textsize" app:layout_constraintBottom_toTopOf="@id/banishView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/eideticView"/>
<AutoCompleteTextView android:background="@color/propitious_mediterranean" android:id="@+id/banishView" android:layout_height="wrap_content" android:layout_margin="@dimen/palmate_tripe" android:layout_width="@dimen/palmate_tripe" android:text="@string/epitaxial_emolument_umbrella" android:textColor="@color/manipulable_finial" app:layout_constraintBottom_toTopOf="@id/janeiroNakedView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gauzePuckView"/>
<EditText android:background="@color/agnes_ribbing" android:id="@+id/janeiroNakedView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/company_juggle_defy" app:layout_constraintBottom_toTopOf="@id/depressedIsaacsonView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/banishView"/>
<EditText android:id="@+id/depressedIsaacsonView" android:layout_height="wrap_content" android:layout_marginStart="12dp" android:layout_width="@dimen/bequest_chalkline_padding" android:text="@string/whence_palindrome_estrous_levine" android:textColor="@color/well_nielsen" android:textSize="@dimen/hackmatack_capsize_textsize" app:layout_constraintBottom_toTopOf="@id/rodentBlabLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/janeiroNakedView"/>
<LinearLayout android:gravity="center" android:id="@+id/rodentBlabLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/motherlandView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/depressedIsaacsonView">
<TextView android:background="@color/apprentice_seymour" android:id="@+id/shitepokeGaudyView" android:layout_height="wrap_content" android:layout_margin="14dp" android:layout_width="wrap_content" android:text="@string/positron_vibrato_bumble_steward" android:textColor="@color/marinade_rasp_wolff"/>
<CheckedTextView android:background="@color/manipulable_finial" android:id="@+id/immuneExplanationView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/might_windy_carmela_silas" android:textColor="@color/spunk_slipshod"/>
<AutoCompleteTextView android:background="@color/integrand_abstain" android:id="@+id/heliotropeMarloweView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/ganymede_across_setback" android:textColor="@color/manipulable_finial"/>
<CheckedTextView android:background="@color/marinade_rasp_wolff" android:id="@+id/inhospitableView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/rustproof_hotfoot_drumhead" android:textColor="@color/manipulable_finial"/>
<EditText android:background="#00AE55" android:id="@+id/graspView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/baja_intricate_padding" android:paddingBottom="10dp" android:text="@string/aitken_instigate_conjugate_sloganeer" android:textColor="@color/forwent_sham" android:textSize="@dimen/chink_equipoise_textsize"/>
<CheckedTextView android:background="@color/manipulable_finial" android:id="@+id/nowadayView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/synchrony_poncho_perfusion" android:textColor="@color/propitious_mediterranean"/>
</LinearLayout>
<EditText android:background="@color/edict_conjugacy_lanky" android:id="@+id/motherlandView" android:layout_height="wrap_content" android:layout_width="@dimen/flemish_rollins_size" android:text="@string/sago_abram_bowline" android:textColor="@color/licensee_pact" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rodentBlabLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
