<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<Button android:background="@color/truism_abuilding" android:id="@+id/nipponView" android:layout_height="wrap_content" android:layout_width="0dp" android:paddingEnd="@dimen/urinal_ballard_size" android:paddingStart="@dimen/consanguineous_pinball_padding" android:text="@string/espionage_spindly_repeal" android:textColor="#0AEB0CED" app:layout_constraintBottom_toTopOf="@id/kahnLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<LinearLayout android:gravity="start" android:id="@+id/kahnLayout" android:layout_height="wrap_content" android:layout_width="182dp" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/eigenstateDingyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/nipponView">
<Button android:id="@+id/cosponsorView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/suey_applied_margin" android:layout_marginEnd="@dimen/consanguineous_pinball_padding" android:layout_marginStart="@dimen/palmate_tripe" android:layout_width="wrap_content" android:padding="@dimen/millie_merrill_margin" android:text="@string/telegraph_hugging_letterman"/>
<LinearLayout android:gravity="center" android:id="@+id/campProtestationLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/hecubaLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
<EditText android:background="@color/edict_conjugacy_lanky" android:id="@+id/amraView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/lidding_ornately_kamchatka_fatigue" android:textColor="@color/licensee_pact" app:layout_constraintBottom_toTopOf="@id/rutherfordView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<CheckBox android:id="@+id/rutherfordView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/schoolhouse_usurp_mooney" app:layout_constraintBottom_toTopOf="@id/synagogueView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/amraView"/>
<TextView android:background="@color/manipulable_finial" android:id="@+id/synagogueView" android:layout_height="wrap_content" android:layout_width="538dp" android:padding="@dimen/circumspect_eigenfunction_padding" android:text="@string/ramming_paycheck_bass" android:textColor="#335D4F20" app:layout_constraintBottom_toTopOf="@id/depraveStageView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rutherfordView"/>
<TextView android:id="@+id/depraveStageView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lome_kept_queer" android:textColor="@color/jitterbug_sully" app:layout_constraintBottom_toTopOf="@id/fixtureThetaLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/synagogueView"/>
<LinearLayout android:gravity="center" android:id="@+id/fixtureThetaLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/downcastView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/depraveStageView">
<AutoCompleteTextView android:id="@+id/churchwomenView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/oklahoma_marriageable_padding" android:paddingTop="10dp" android:text="@string/commotion_compelled_fixture" android:textColor="@color/equinox_disposal"/>
<AutoCompleteTextView android:id="@+id/continuedFabricateView" android:layout_height="wrap_content" android:layout_margin="@dimen/mellow_dare_height" android:layout_width="wrap_content" android:text="@string/lockstep_sherlock_inkling_oppressor" android:textColor="@color/forwent_sham"/>
<TextView android:background="@color/edict_conjugacy_lanky" android:id="@+id/venusianView" android:layout_height="wrap_content" android:layout_margin="@dimen/lightning_aristocrat_height" android:layout_width="wrap_content" android:text="@string/sleazy_atomic_salk_bender" android:textColor="@color/buss_horselike" android:textSize="@dimen/precept_freehand_textsize"/>
</LinearLayout>
<AutoCompleteTextView android:background="@color/apprentice_seymour" android:id="@+id/downcastView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/greedy_rant_height" android:text="@string/patient_rebutted_hornblower" app:layout_constraintBottom_toTopOf="@id/feintView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fixtureThetaLayout"/>
<CheckedTextView android:id="@+id/feintView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/mailmen_bentley_inception_lithic" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/downcastView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
<Button android:id="@+id/bahreinView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/lester_victorious_consequent" android:textColor="@color/well_nielsen"/>
<CheckBox android:background="#8B220F" android:id="@+id/fumaroleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="44dp" android:paddingStart="32dp" android:text="@string/erodible_haugen_powder_tempera"/>
<CheckedTextView android:background="#9CBFF9" android:id="@+id/phenolWispView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bigotry_infarct_erasmus"/>
</LinearLayout>
<AutoCompleteTextView android:background="@color/parkway_scottish_buzzword" android:id="@+id/stephensonDissuadeView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/entertain_wordsworth_width" android:layout_marginStart="@dimen/consanguineous_pinball_padding" android:layout_marginTop="@dimen/creditor_foal_size" android:layout_width="wrap_content" android:text="@string/olympia_farfetched_infinitude_callous" android:textColor="@color/carboniferous_uninominal"/>
</LinearLayout>
<CheckedTextView android:background="@color/anna_bookkeep" android:id="@+id/eigenstateDingyView" android:layout_height="wrap_content" android:layout_width="@dimen/werther_magma_height" android:text="@string/rabbinate_thorny_dubhe_lovelace" app:layout_constraintBottom_toTopOf="@id/caputoView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/kahnLayout"/>
<AutoCompleteTextView android:background="@color/propitious_mediterranean" android:id="@+id/caputoView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/teal_heckle_shack_ester" android:textColor="@color/edict_conjugacy_lanky" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/eigenstateDingyView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
